Added file selection/creation

--- a/Logic Pipes/Logic Pipes.csproj
+++ b/Logic Pipes/Logic Pipes.csproj
@@ -46,17 +46,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dialogue.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Fileselect.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Fileselect.Designer.cs">
+      <DependentUpon>Fileselect.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Prompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Prompt.Designer.cs">
+      <DependentUpon>Prompt.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Fileselect.resx">
+      <DependentUpon>Fileselect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Prompt.resx">
+      <DependentUpon>Prompt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
