Added File saving/reading. Does not interact with actual program in this commit.

--- a/Logic Pipes/Logic Pipes.csproj
+++ b/Logic Pipes/Logic Pipes.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dialogue.cs" />
+    <Compile Include="FileList.cs" />
     <Compile Include="Fileselect.cs">
       <SubType>Form</SubType>
     </Compile>
